Fixing height styling bug - If Design & Development Options is not showing, height and positioning of the other elements shift weirdly

--- a/css/styles/base.css
+++ b/css/styles/base.css
@@ -45,6 +45,7 @@ main > * + * {
 
 @media (min-width: 1000px) {
   main {
+    align-content: start;
     display: grid;
     gap: 0 var(--space-xxx-large);
     grid-template-areas:
